--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 Wantedly
               </div>
             </a>
-            <a class="contact-item" href="https://instagram.com/" target="_blank" rel="noopener">
+            <a class="contact-item" href="https://instagram.com/_9mak___" target="_blank" rel="noopener">
               <div class="neumo">
                 Instagram
               </div>
