--- a/works_aono.html
+++ b/works_aono.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
   <meta property='og:title' content='WebデザイナーKAZUKI OGUMA ポートフォリオ'>
-  <meta property='og:url' content='URLが入る'>
+  <meta property='og:url' content='https://9mak.github.io/Portfolio/works_aono.html'>
   <meta property='og:description' content='KAZUKI OGUMAのポートフォリオサイトです。'>
-  <meta property="og:image" content="img/ogp.png">
+  <meta property="og:image" content="./img/favicon.svg">
   <meta name="description" content="KAZUKI OGUMAのポートフォリオサイトです" />
   <title>KAZUKI OGUMA ポートフォリオ</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,8 +16,8 @@
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
   <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="img/favicon.ico" />
-  <link rel=”canonical” href=”URLが入る” />
+  <link rel="shortcut icon" href="./img/favicon.svg" />
+  <link rel=”canonical” href="https://9mak.github.io/Portfolio/works_aono.html" />
 </head>
 
 <body>
@@ -50,24 +50,19 @@
             <img src="img/works/aono.png" alt="">
           </p>
           <div class="article-body">
-            <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります（作品について一言）
-            </p>
-            <h3 class="article-info-title">URL</h3>
-            <p><a href="https://yahoo.co.jp" target="_blank" rel="noopener">https://yahoo.co.jp</a></p>
             <h3 class="article-info-title">担当</h3>
-            <p>デザイン・コーディング</p>
+            <p>コーディング</p>
             <h3 class="article-info-title">サイトの目的</h3>
             <p>サービスの認知と新規クライアントの獲得</p>
             <h3 class="article-info-title">ターゲット</h3>
-            <p>テキストが入りますテキストが入ります</p>
-            <h3 class="article-info-title">デザインについて</h3>
-            <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
-            </p>
+            <p>架空の建設会社</p>
             <h3 class="article-info-title">コーディングについて</h3>
             <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
+              基礎的なHTMLやCSSの学習を終了した上で、2回目の模写コーディングです。<br>
+              カンプが出来上がっている状態からのコーディングを想定し、<br>
+              いかにカンプ通りにサイトを作成するかを意識しました。<br>
+              フォントサイズや文字列どうしの間隔やホバー時の挙動など細かく再現できたと思います。<br>
+              参考：https://danblog.tokyo/
             </p>
           </div>
           <div class="home-link">
