--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
   <meta property='og:title' content='WebデザイナーKAZUKI OGUMA ポートフォリオ'>
-  <meta property='og:url' content='URLが入る'>
+  <meta property='og:url' content='https://9mak.github.io/Portfolio/'>
   <meta property='og:description' content='KAZUKI OGUMAのポートフォリオサイトです。'>
   <meta property="og:image" content="./img/favicon.svg">
   <meta name="description" content="KAZUKI OGUMAのポートフォリオサイトです" />
@@ -17,7 +17,7 @@
   <link href="./css/ress.css" media="all" rel="stylesheet" type="text/css" />
   <link href="./css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="./img/favicon.svg" />
-  <link rel=”canonical” href=”URLが入る” />
+  <link rel=”canonical” href="https://9mak.github.io/Portfolio/" />
 </head>
 
 <body>
@@ -92,17 +92,17 @@
         <div class="inner">
           <h2 class="title">WORKS</h2>
           <div class="works-list">
-            <a class="works-item" href="#">
+            <a class="works-item" href="./works_aono.html">
               <p class="works-img"><img src="./img/works/aono_thumb.png" alt="" /></p>
               <p class="works-name">蒼乃建設</p>
               <p class="works-info">Coding(Responsive)</p>
             </a>
-            <a class="works-item" href="#">
+            <a class="works-item" href="./works_xeory.html">
               <p class="works-img"><img src="./img/works/xeory_thumb.png" alt="" /></p>
               <p class="works-name">Xeory</p>
               <p class="works-info">Coding</p>
             </a>
-            <a class="works-item" href="#">
+            <a class="works-item" href="./works_oneco.html">
               <p class="works-img"><img src="./img/works/ONECO_thumb.png" alt="" /></p>
               <p class="works-name">ONECO</p>
               <p class="works-info">Design</p>
