--- a/web-production/lp-bonfire-gear/index.html
+++ b/web-production/lp-bonfire-gear/index.html
@@ -83,14 +83,22 @@
                     世界に一つだけの模様を、炎と共に刻んでいく。
                 </p>
                 <div class="pt-8">
-                    <button class="border border-orange-900/50 text-orange-100 px-12 py-4 hover:bg-orange-900/20 transition-colors tracking-widest relative overflow-hidden group">
-                        <span class="relative z-10">製品詳細を見る</span>
-                        <div class="absolute inset-0 bg-orange-600/10 transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"></div>
+                    <button class="border-2 border-orange-500/80 bg-orange-900/30 text-orange-100 px-12 py-4 hover:bg-orange-600/40 hover:border-orange-400 transition-all tracking-widest relative overflow-hidden group shadow-lg shadow-orange-900/30">
+                        <span class="relative z-10 font-bold">製品詳細を見る</span>
+                        <div class="absolute inset-0 bg-orange-600/20 transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"></div>
                     </button>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Sticky CTA Button -->
+    <div class="fixed bottom-8 right-8 z-50">
+        <button class="bg-orange-600 hover:bg-orange-500 text-white font-bold px-8 py-4 rounded-sm shadow-2xl shadow-orange-900/50 transition-all hover:scale-105 tracking-widest border-2 border-orange-400/50">
+            <span class="block text-xs opacity-80 mb-1">SHIZUBI</span>
+            <span class="text-lg">購入する</span>
+        </button>
+    </div>
 
     <!-- Gallery -->
     <section class="py-32 px-6 relative z-20">
